[page:clock] fix font size overflow

--- a/src/pages/a/clock/_styles/styles.module.scss
+++ b/src/pages/a/clock/_styles/styles.module.scss
@@ -54,7 +54,7 @@ $SCREEN_WIDTH_SMALL: u.Rem(650px);
 	> h2 {
 		padding: u.Rem(16px) u.Rem(16px) 0 u.Rem(16px);
 		text-align: center;
-		font-size: 10dvw;
+		font-size: 8dvw;
 		font-family: var(--g-font-family-monospace);
 		font-weight: bold;
 
@@ -127,7 +127,7 @@ $SCREEN_WIDTH_SMALL: u.Rem(650px);
 
 	> h2 {
 		text-align: center;
-		font-size: 12dvw;
+		font-size: 10dvw;
 		font-family: var(--g-font-family-monospace);
 		font-weight: bold;
 
